--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
+/WebGL Build/
+/WebGL Builds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/Assets/AssetStoreTools*
 *.log
 
 # MemoryCaptures can get excessive in size.
